Adding data to github

--- a/broadway-edav.ipynb
+++ b/broadway-edav.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "55d677db",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "41bc2348",
    "metadata": {},
    "outputs": [
@@ -46,12 +46,12 @@
     "# Download latest version\n",
     "path_broadway = kagglehub.dataset_download(\"mexwell/broadway-shows\")\n",
     "\n",
-    "print(\"Path to dataset files:\", path_broadway)"
+    "# print(\"Path to dataset files:\", path_broadway)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "c8c451a6",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "19d3106d",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "28bbb544",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "67cb7a76",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "c54d5e5c",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "fb58ff04",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "9160e546",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "ecfb8ca6",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "3e6986f8",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "0a810cbc",
    "metadata": {},
    "outputs": [],
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "8b04bd30",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "87d71679",
    "metadata": {},
    "outputs": [
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "8c2f95d1",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "37124427",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "893c6876",
    "metadata": {},
    "outputs": [],
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "4d1ecc31",
    "metadata": {},
    "outputs": [
@@ -2593,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "0cf8fb18",
    "metadata": {},
    "outputs": [
@@ -2636,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "da151e0f",
    "metadata": {},
    "outputs": [
@@ -2658,7 +2658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "4d4131ee",
    "metadata": {},
    "outputs": [
@@ -3690,7 +3690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "49c802a0",
    "metadata": {},
    "outputs": [],
@@ -3718,7 +3718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "4c7e0d0f",
    "metadata": {},
    "outputs": [],
@@ -3734,7 +3734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "5a26387b",
    "metadata": {},
    "outputs": [
@@ -3765,7 +3765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "3dac265c",
    "metadata": {},
    "outputs": [
@@ -3789,7 +3789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "acc7e2c2",
    "metadata": {},
    "outputs": [
@@ -4807,7 +4807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "819105e2",
    "metadata": {},
    "outputs": [
@@ -4842,7 +4842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "79314e0d",
    "metadata": {},
    "outputs": [
@@ -5852,7 +5852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "75af0ef4",
    "metadata": {},
    "outputs": [
@@ -5875,7 +5875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "f028b301",
    "metadata": {},
    "outputs": [
@@ -6886,7 +6886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "8faf29cf",
    "metadata": {},
    "outputs": [
@@ -6909,7 +6909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "f7e44a3c",
    "metadata": {},
    "outputs": [
@@ -8511,7 +8511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "b5c4ed6d",
    "metadata": {},
    "outputs": [
@@ -8539,7 +8539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "75e2e032",
    "metadata": {},
    "outputs": [
@@ -8572,7 +8572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "806f0e11",
    "metadata": {},
    "outputs": [
@@ -8602,7 +8602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "74986159",
    "metadata": {},
    "outputs": [
@@ -8632,7 +8632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "a9f36bcb",
    "metadata": {},
    "outputs": [],
@@ -8651,7 +8651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "71b1bd10",
    "metadata": {},
    "outputs": [],
@@ -8663,7 +8663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "7f53c347",
    "metadata": {},
    "outputs": [],
@@ -8675,7 +8675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "dec7ea9e",
    "metadata": {},
    "outputs": [
@@ -8706,7 +8706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "0c976a8d",
    "metadata": {},
    "outputs": [
@@ -8758,7 +8758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "3424f0e4",
    "metadata": {},
    "outputs": [],
@@ -8768,7 +8768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "78bd2295",
    "metadata": {},
    "outputs": [],
@@ -8779,7 +8779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "b06efa0a",
    "metadata": {},
    "outputs": [
@@ -8858,7 +8858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "2caa25e0",
    "metadata": {},
    "outputs": [
@@ -9876,7 +9876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "d879a71a",
    "metadata": {},
    "outputs": [
@@ -9894,7 +9894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "e3f744c4",
    "metadata": {},
    "outputs": [],
@@ -9904,7 +9904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "f5032cc3",
    "metadata": {},
    "outputs": [],
@@ -9927,7 +9927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "df59d738",
    "metadata": {},
    "outputs": [
