adding requirements.txt

--- a/broadway-edav.ipynb
+++ b/broadway-edav.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "55d677db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/broadway/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -28,18 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "41bc2348",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Path to dataset files: /Users/zainabshakruwala/.cache/kagglehub/datasets/mexwell/broadway-shows/versions/1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c8c451a6",
    "metadata": {},
    "outputs": [],
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "19d3106d",
    "metadata": {},
    "outputs": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "28bbb544",
    "metadata": {},
    "outputs": [],
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "67cb7a76",
    "metadata": {},
    "outputs": [
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c54d5e5c",
    "metadata": {},
    "outputs": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fb58ff04",
    "metadata": {},
    "outputs": [
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9160e546",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ecfb8ca6",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3e6986f8",
    "metadata": {},
    "outputs": [
@@ -1459,7 +1460,7 @@
        "287  Hamilton          98459890"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0a810cbc",
    "metadata": {},
    "outputs": [],
@@ -1481,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8b04bd30",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1497,7 @@
        "Freq: MS, Name: Statistics.Gross, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "87d71679",
    "metadata": {},
    "outputs": [
@@ -1636,7 +1637,7 @@
        "14 1992-05-01       5008285"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8c2f95d1",
    "metadata": {},
    "outputs": [
@@ -1657,7 +1658,7 @@
        "Timestamp('2016-08-14 00:00:00')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1668,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "37124427",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "893c6876",
    "metadata": {},
    "outputs": [],
@@ -1724,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4d1ecc31",
    "metadata": {},
    "outputs": [
@@ -2593,7 +2594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "0cf8fb18",
    "metadata": {},
    "outputs": [
@@ -2613,7 +2614,7 @@
        "  Text(9, 0, 'Les Miserables')])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2636,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "da151e0f",
    "metadata": {},
    "outputs": [
@@ -2646,7 +2647,7 @@
        "669"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2658,7 +2659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4d4131ee",
    "metadata": {},
    "outputs": [
@@ -3690,7 +3691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "49c802a0",
    "metadata": {},
    "outputs": [],
@@ -3718,7 +3719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "4c7e0d0f",
    "metadata": {},
    "outputs": [],
@@ -3734,7 +3735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "5a26387b",
    "metadata": {},
    "outputs": [
@@ -3765,7 +3766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "3dac265c",
    "metadata": {},
    "outputs": [
@@ -3789,7 +3790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "acc7e2c2",
    "metadata": {},
    "outputs": [
@@ -4807,7 +4808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "819105e2",
    "metadata": {},
    "outputs": [
@@ -4817,7 +4818,7 @@
        "np.float64(0.818353817935012)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4842,7 +4843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "79314e0d",
    "metadata": {},
    "outputs": [
@@ -5852,7 +5853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "75af0ef4",
    "metadata": {},
    "outputs": [
@@ -5875,7 +5876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f028b301",
    "metadata": {},
    "outputs": [
@@ -6886,7 +6887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "8faf29cf",
    "metadata": {},
    "outputs": [
@@ -6909,7 +6910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "f7e44a3c",
    "metadata": {},
    "outputs": [
@@ -8492,7 +8493,7 @@
        "153           103483.043562  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8511,7 +8512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "b5c4ed6d",
    "metadata": {},
    "outputs": [
@@ -8539,7 +8540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "75e2e032",
    "metadata": {},
    "outputs": [
@@ -8572,7 +8573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "806f0e11",
    "metadata": {},
    "outputs": [
@@ -8602,7 +8603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "74986159",
    "metadata": {},
    "outputs": [
@@ -8632,7 +8633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "a9f36bcb",
    "metadata": {},
    "outputs": [],
@@ -8651,7 +8652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "71b1bd10",
    "metadata": {},
    "outputs": [],
@@ -8663,7 +8664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "7f53c347",
    "metadata": {},
    "outputs": [],
@@ -8675,7 +8676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "dec7ea9e",
    "metadata": {},
    "outputs": [
@@ -8706,7 +8707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "0c976a8d",
    "metadata": {},
    "outputs": [
@@ -8747,7 +8748,7 @@
        "Name: predicted_mean, dtype: float64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8758,7 +8759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "3424f0e4",
    "metadata": {},
    "outputs": [],
@@ -8768,7 +8769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "78bd2295",
    "metadata": {},
    "outputs": [],
@@ -8779,7 +8780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "b06efa0a",
    "metadata": {},
    "outputs": [
@@ -8847,7 +8848,7 @@
        "127 2014-05-01    8.473196e+06"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8858,7 +8859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "2caa25e0",
    "metadata": {},
    "outputs": [
@@ -9876,7 +9877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "d879a71a",
    "metadata": {},
    "outputs": [
@@ -9894,7 +9895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "e3f744c4",
    "metadata": {},
    "outputs": [],
@@ -9904,7 +9905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "f5032cc3",
    "metadata": {},
    "outputs": [],
@@ -9927,7 +9928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "df59d738",
    "metadata": {},
    "outputs": [
@@ -9935,7 +9936,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean of the residuals of <statsmodels.tsa.arima.model.ARIMAResultsWrapper object at 0x14ffaba10> is 13601.021950078026\n"
+      "The mean of the residuals of <statsmodels.tsa.arima.model.ARIMAResultsWrapper object at 0x17bb05450> is 13601.021950078026\n"
      ]
     },
     {
